Fix pushing tall flex items for "reverse" flex containers
Categories
(Core :: Layout: Flexbox, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox117 | --- | fixed |
People
(Reporter: TYLin, Assigned: TYLin)
References
Details
Attachments
(1 file)
My patch in bug 1743890 Part 2 doesn't consider reversed flex item or flex line. For example,
-
In a
flex-direction:column-reverseflex container, the first item in the column is at the end, and the last item is the bstart-most thing. -
In a
flex-flow:row wrap-reversemulti-line flex container, the first line is at the bottom edge.
| Assignee | ||
Comment 1•2 years ago
|
||
When iterating flex line and flex item in ReflowChildren(), start from the
startmost line and startmost item with respect to the flex container's
writing-mode. This is equivalent to iterate the items in visual order, which is
necessary to compute the item's position correctly, because any shift to the
startmost line or startmost item can affect later ones.
Also, change a condition in Reflow() to aReflowInput.IsInFragmentedContext()
so that the necessary data can be updated when the flex container fragment is
reflowed in the last column. Otherwise, there will be "unexpected max block
size" assertions [1] while running layout/generic/crashtests/1666592.html.
Updated•2 years ago
|
Comment 3•2 years ago
|
||
| bugherder | ||
Description
•